Update to addresses etc..

--- a/docs/write_up/JDM_mixed_fishery.tex
+++ b/docs/write_up/JDM_mixed_fishery.tex
@@ -28,9 +28,12 @@
 \maketitle
 
 \begin{affiliations}
-\item Galway-Mayo Institute of Technology (GMIT) 
-\item Centre for Environment, Fisheries and Aquaculture Science (Cefas)
-\item North West Fisheries Science Center, NOAA
+\item Marine and Freshwater Research Centre, Galway-Mayo Institute of
+	Technology (GMIT), Dublin Road, Galway, H91 T8NW, Ireland 
+\item Centre for Environment, Fisheries and Aquaculture Science (Cefas),
+	Pakefield Road, Lowestoft, Suffolk, NR33 0HT, UK
+\item North West Fisheries Science Center, NOAA, 2725 Montlake Blvd E, Seattle,
+	Washington, 98112, USA
 \end{affiliations}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
