--- a/docs/write_up/Figures.tex
+++ b/docs/write_up/Figures.tex
@@ -21,7 +21,7 @@
 \begin{center}
 	\includegraphics[width=\linewidth]{"Fig1_Combined"}
 	\label{fig:1}
-	\caption{Factor coefficients for the first three factors for (a) the
+	\caption{Factor values for the first three factors for (a) the
 		average encounter probability and (b) the average positive
 		density for the species-groups (outer figures) and spatially
 		(inner figures).  Red: positive association to the factor,
