--- a/docs/write_up/JDM_mixed_fishery.tex
+++ b/docs/write_up/JDM_mixed_fishery.tex
@@ -723,7 +723,7 @@ References: 45 \\
 \begin{center}
 	\includegraphics[width=0.8\linewidth]{"Fig1_Combined"}
 	\label{fig:1}
-	\caption{Factor coefficients for the first three factors for (a) the
+	\caption{Factor values for the first three factors for (a) the
 		average encounter probability and (b) the average positive
 		density for the species-groups (outer figures) and spatially
 		(inner figures).  Red: positive association to the factor,
