Addressing NOAA internal review comments

--- a/docs/write_up/JDM_mixed_fishery.tex
+++ b/docs/write_up/JDM_mixed_fishery.tex
@@ -85,7 +85,7 @@ individual quotas, and catches do not match available stock quotas, either a
 vessel must stop fishing when the first quota is reached (the `choke' species)
 or overexploitation of the weaker species occurs while fishers continue to
 catch more healthy species and throw back (`discard') the fish for which they
-have no quota.
+have no quota \cite{Batsleer2015}.
 
 Sustainability of European fisheries has been hampered by this `mixed fishery
 problem' for decades with large-scale discarding resulting \cite{Borges2015,
@@ -98,22 +98,26 @@ as to be able to produce their Maximum Sustainable Yield
 expected to contribute to attainment of the goal of Good Environmental Status
 (GES) under the European Marine Strategy Framework Directive (MSFD;
 \cite{EuropeanParliament2008}) and move Europe towards an ecosystem based
-approach to fisheries management \cite{Garcia2003}. Unless fishers can avoid
-catch of unwanted species they will have to stop fishing when reaching their
-first restrictive quota. This introduces a potential significant cost to
-fishers of under-utilised quota\cite{Hoff2010a, Ulrich2016} and provides a
-strong incentive to mitigate such losses \cite{Condie2013, Condie2013a}. 
+approach to fisheries management \cite{Garcia2003}. 
 
-The ability of fishers to align their catch with available quota depends on
-being able to exploit target species while avoiding unwanted catch. Methods by
-which fishers can alter their fishing patterns include by switching fishing
-method (e.g. trawling to netting), changing technical gear characteristics
-(e.g.  introducing escapement panels in nets), or the timing and location of
-fishing activity \cite{Fulton2011b, vanPutten2012a}. Otter trawl gears are
-known to have higher catch rates of roundfish due to the higher headline and
-wider sweeps which herd demersal fish into the net. Conversely, beam trawls,
-which employ chain mesh to 'dig' benthic flatfish species, have higher catch
-rates for these species \cite{Fraser2008}.
+Societal objectives for fisheries are to achieve MSY across ecosystem
+components are framed alongside individual fishers goals to maximise utility;
+whether that be profit, income or the continuance of traditional practices.
+Under the new policy, unless fishers can avoid catch of unwanted species they
+will have to stop fishing when reaching their first restrictive quota. This
+introduces a potential significant cost to fishers of under-utilised
+quota\cite{Hoff2010a, Ulrich2016} and provides a strong incentive to mitigate
+such losses \cite{Condie2013, Condie2013a}. The ability of fishers to align
+their catch with available quota depends on being able to exploit target
+species while avoiding unwanted catch. Methods by which fishers can alter their
+fishing patterns include by switching fishing method (e.g. trawling to
+netting), changing technical gear characteristics (e.g.  introducing escapement
+panels in nets), or the timing and location of fishing activity
+\cite{Fulton2011b, vanPutten2012a}. Otter trawl gears are known to have higher
+catch rates of roundfish due to the higher headline and wider sweeps which herd
+demersal fish into the net. Conversely, beam trawls, which employ chain mesh to
+'dig' benthic flatfish species, have higher catch rates for these species
+\cite{Fraser2008}.
 
 Spatiotemporal management measures (such as time-limited fishery closures)
 have been applied to reduce unwanted catch with varying degrees of success
@@ -419,26 +423,42 @@ estimates.  We posit that such advice could be enhanced by integrating data
 obtained directly from commercial fishing vessels at a higher temporal
 resolution, providing real-time forecasts to inform fishing choices that also
 captures seasonal differences in distributions, akin to weather forecasting.
+Advice informed by a model including a seasonal or real-time component could
+inform optimal policies for time-area closures, move-on rules or even as
+informal information to be utilised by fishers directly without the need for
+costly continuous data collection on environmental parameters, but by using the
+vessels-as-laboratories approach.
 
 An important question for the implementation of the EU's landing obligation is
 how far spatial avoidance can go to achieving catch balancing in fisheries.
 Our model captures differences between location fished for two gear types and
-their broad scale effect on catch composition; information which could be used
-to inform decisions on the contribution spatial avoidance can make in
-implementing the landing obligation. However, it likely the analysis reflects a
-lower bound on the utility of spatial avoidance as fine scale behavioural
-decisions such as time-of-day, gear configuration and location choices can also
-be used to affect catch\cite{Abbott2015, Thorson2016}. Results of empirical
-studies undertaken elsewhere\cite{Branch2008, Kuriyama2016} suggest limits to
-the effectiveness of spatial avoidance and our framework could be used to
-simulate different fishing effort scenarios to identify lower bounds for
-optimum spatial avoidance\cite{Reimer2017} to support management
-decisions\cite{Ulrich2016}. Identifying the limits of spatial targeting and
-avoidance could support scientific contribution to meeting the goal of
-maximising catches in mixed fisheries within single stock quota constraints.
-It may also inform the extent to which measures such as  gear changes and
-time-area closures are needed to support transition to the new management
-system.
+their broad scale effect on catch composition, information crucial for managers
+in implementing the landing obligation.  However, it likely the analysis
+reflects a lower bound on the utility of spatial avoidance as fine scale
+behavioural decisions such as time-of-day, gear configuration and location
+choices can also be used to affect catch\cite{Abbott2015, Thorson2016}. Results
+of empirical studies undertaken elsewhere\cite{Branch2008, Kuriyama2016}
+suggest limits to the effectiveness of spatial avoidance. Differences in
+ability to change catch composition have also been observed for different
+fleets; in the North Sea targeting ability was found to differ between otter
+and beam trawlers as well as between vessels of different sizes\cite{Pascoe2007}.  
+
+Our framework allows for a quantitative understanding of the broad scale global
+production set available to fishers\cite{Reimer2017} and thus the extent to
+which they can alter catch compositions while operating in a mixed fishery.
+Simulations of spatial effort allocation scenarios based on the production sets
+derived from the model estimates could be used as inputs to fisher behavioural
+models to allow for identification of the lower bounds of optimum spatial
+harvest strategies. This would provide managers with information useful for
+examining trade-offs in quota setting by integrating potential for spatial
+targeting in changing catch composition, thus provide a scientific contribution
+to meeting the goal of maximising catches in mixed fisheries within single
+stock quota constraints\cite{Ulrich2016}. Further, the correlations among
+species could provide information on fisheries at risk of capturing protected,
+endangered or threatened species such as elasmobranches, and allow
+identification of areas where there are high ratios of protected to target
+species.
+
 
 Complex environmental, fishery and community drivers of distribution for groups
 of species highlights the scale of the challenge in separating catches within
@@ -702,11 +722,11 @@ References: 45 \\
 	 surveys used in this study without which it would not have been
 	 possible.  
 	 
-	 The manuscript benefiting hugely from discussions with David Stokes,
-	 Colm Lordan and Hans Gerritsen (Marine Institute, Ireland), Lisa
-	 Readdy, Chris Darby, Ian Holmes, Stephen Shaw and Tim Earl (Cefas).
-	 Grateful thanks also go to Lisa Readdy for provision of the Cefas
-	 datasets.
+	 The manuscript benefited hugely from discussions with David Stokes,
+	 Colm Lordan, Claire Moore and Hans Gerritsen (Marine Institute,
+	 Ireland), Lisa Readdy, Chris Darby, Ian Holmes, Stephen Shaw and Tim
+	 Earl (Cefas).  Grateful thanks also go to Lisa Readdy for provision of
+	 the Cefas datasets.
 
  \item[Competing Interests] The authors declare that they have
 	 no competing financial interests.
