Responding to NOAA internal review

--- a/docs/write_up/JDM_mixed_fishery.tex
+++ b/docs/write_up/JDM_mixed_fishery.tex
@@ -78,14 +78,16 @@ productivity.
 
 A particular challenge in realising increased catches from rebuilt populations
 is maximising yields from mixed fisheries \cite{Branch2008, Kuriyama2016,
-	Ulrich2016}. In mixed fisheries, the predominant type
-of fishery worldwide, several fish species are caught together in the same net
-or fishing operation (known as a `technical interaction'). If managed by
-individual quotas, and catches do not match available stock quotas, either a
-vessel must stop fishing when the first quota is reached (the `choke' species)
-or overexploitation of the weaker species occurs while fishers continue to
-catch more healthy species and throw back (`discard') the fish for which they
-have no quota \cite{Batsleer2015}.
+	Ulrich2016}. In mixed fisheries, the predominant type of fishery
+worldwide, several fish species are caught together in the same net or fishing
+operation (known as a `technical interaction'). If managed by individual
+quotas, and catches do not match available stock quotas, either a vessel must
+stop fishing when the first quota is reached (the `choke' species) or
+overexploitation of the weaker species occurs while fishers continue to catch
+more healthy species and throw back (`discard') the fish for which they have no
+quota \cite{Batsleer2015}. Therefore there is a pressing need for scientific
+tools which simplify the complexities of mixed fisheries to help managers and
+fishers maximise catches. 
 
 Sustainability of European fisheries has been hampered by this `mixed fishery
 problem' for decades with large-scale discarding resulting \cite{Borges2015,
