--- a/docs/write_up/JDM_mixed_fishery.tex
+++ b/docs/write_up/JDM_mixed_fishery.tex
@@ -40,26 +40,25 @@
 \begin{linenumbers}
 
 \begin{abstract} 
-In mixed fisheries overexploitation of weaker stocks results when catches
-continue in fisheries pursuing quota for healthy stocks and these are
-discarded. As EU fisheries management moves to count all fish caught against
+Overexploitation and discarding of reduced quota stocks occurs when catches continue in mixed fisheries pursuing high quota stocks. As EU fisheries management moves to count all fish caught against
 quota (the `Landings obligation'), the challenge is to catch available quota
 within new constraints, else lose productivity.  
 
 A mechanism for decoupling exploitation of species caught together is spatial
-targeting, but this remains challenging due to complex fishery dynamics and
-lack of understanding of spatiotemporal community dynamics. We apply a joint
-species distribution model to understand how spatial community and fishery
-dynamics interact to determine species and size composition in the highly mixed
+targeting, but this remains challenging due to complex fishery dynamics and a
+lack of understanding of spatiotemporal community dynamics. We develop a joint
+species distribution model (spatiotemporal factor analysis) to understand how spatial community and fishery
+dynamics interact to determine species and size composition in the example of the highly mixed
 fisheries of the Celtic Sea. Clear common spatial patterns emerge for three
 distinct species-groups and, while distribution varies inter-annually, the same
 species-groups are consistently found in higher densities together, with more
-subtle differences within species-groups.
+subtle differences within species-groups. The results highlight both opportunities for and limitations 
+of the ability to spatiotemporally separate catches.
 
 We highlight the importance of dimension reduction techniques to focus
 management discussion on axes of maximal separation in space and time. We
 propose that spatiotemporal modelling of available data is a scientific
-requirement to address the challenges of managing mixed fisheries.  
+requirement to address the pervasive and nuanced challenges of managing mixed fisheries.  
 \end{abstract}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -72,7 +71,7 @@ management of fisheries has the potential to increase population sizes and
 allow increased sustainable catches, yet fisheries catch globally remains
 stagnant \cite{FAO2016}. In light of projected increased demand for fish
 protein \cite{B??n??2016} there is an important role for well managed fisheries
-to play in supporting future food security \cite{Mcclanahan2015} and there
+in supporting future food security \cite{Mcclanahan2015} and there
 remains a need to ensure fisheries are managed efficiently to maximise
 productivity.
 
@@ -85,7 +84,7 @@ quotas, and catches do not match available stock quotas, either a vessel must
 stop fishing when the first quota is reached (the `choke' species) or
 overexploitation of the weaker species occurs while fishers continue to catch
 more healthy species and throw back (`discard') the fish for which they have no
-quota \cite{Batsleer2015}. Therefore there is a pressing need for scientific
+quota \cite{Batsleer2015}. There is, therefore, a pressing need for scientific
 tools which simplify the complexities of mixed fisheries to help managers and
 fishers maximise catches. 
 
@@ -102,8 +101,8 @@ expected to contribute to attainment of the goal of Good Environmental Status
 \cite{EuropeanParliament2008}) and move Europe towards an ecosystem based
 approach to fisheries management \cite{Garcia2003}. 
 
-Societal objectives for fisheries are to achieve MSY across ecosystem
-components are framed alongside individual fishers goals to maximise utility;
+Societal objectives for fisheries to achieve MSY across ecosystem
+components are paralleled by individual fishers goals to maximise utility;
 whether that be profit, income or the continuance of traditional practices.
 Under the new policy, unless fishers can avoid catch of unwanted species they
 will have to stop fishing when reaching their first restrictive quota. This
@@ -130,14 +129,14 @@ particular vulnerable species in order to reduce or eliminate discards
 generally been targeted at individual species without considering associations
 and interactions among several species. Highly mixed fisheries are complex with
 spatial, technological and community interactions combining. The design of
-spatio-temporal management measures which aim to allow exploitation of healthy
-stocks while protecting weaker stocks requires understanding of these
-interactions at a meaningful scale to managers and fishers. Here, our goal is
+spatio-temporal management measures which aim to allow exploitation of high quota
+stocks while protecting low quota stocks requires understanding of these
+interactions at a scale meaningful to managers and fishers. Here, our goal is
 to develop a framework for understanding these complexities. We do so by
 implementing a spatio-temporal dimension reduction method and use the results
 to draw inference on the fishery-community dynamics, creating a framework to
 identify trends common among species-groups. We use this to describe where
-spatial measures can contribute to mitigating unwanted catches in mixed
+spatial measures can contribute to mitigating unwanted catches in highly mixed
 fisheries.
 
 
@@ -154,7 +153,7 @@ species as a function of latent variables \cite{Thorson2015} representing
 spatial variation (9 factors; which we call 'average' spatial variation) and
 spatio-temporal variation (9 factors) for encounter probability and positive
 catch rates (which we call 'positive density') separately \cite{Thorson2015a}.
-We use the resultant exploratory factor analysis to identify community dynamics
+We use the resultant factor analysis to identify community dynamics
 and drivers common among 18 species-groups and present results through
 transformation of the loading matrices using PCA rotation. By describing the
 species-groups dynamics through underlying contributory spatiotemporal factors
@@ -176,8 +175,7 @@ types \cite{Ellis2000, Gerritsen2012}. Close to 150 species have been
 identified in the commercial catches of the Celtic Sea, with approximately 30
 species dominating the catch \cite{Mateo2016}.
 
-We parametrise our spatiotemporal model using catch data from seven fisheries
-independent surveys undertaken in the Celtic Sea over the period 1990 - 2015
+We parametrise our spatiotemporal model using catch data from seven fisheries-independent surveys undertaken in the Celtic Sea over the period 1990 - 2015
 (Table S1) and include nine of the main commercial species: Atlantic cod
 (\textit{Gadus morhua}), Atlantic haddock (\textit{Melanogrammus aeglefinus}),
 Atlantic whiting (\textit{Merlangius merlangus}), European Hake
@@ -203,7 +201,7 @@ three factors (after PCA rotation) account for 83.7 \% of the between
 species-group variance in average encounter probability and 69 \% of the
 between species-group variance in average positive density. A clear spatial
 pattern can been seen both for encounter probability and positive density, with
-a positive value associated with the first factor in the inshore North Easterly
+a positive value associated with the first factor in the inshore north easterly
 part of the Celtic Sea into the Bristol Channel and Western English Channel,
 moving to a negative value offshore in the south-westerly waters (Figure 1).
 The species-group loadings coefficients show plaice, sole and whiting to be
@@ -212,25 +210,26 @@ other species-groups are negatively associated. For average positive density,
 positive associations are also found for haddock and juvenile cod. This is
 indicative of a more inshore distribution for these species-groups. 
 
-On the second spatial factor for encounter probability a North / South split
+On the second spatial factor for encounter probability a north / south split
 can be seen at approximately 49$^{\circ}$ N while positive density is more
 driven by a positive value in the deeper westerly waters as well as some
 inshore areas. Species-group values for the second factor indicate there are
-positive associations for juvenile monkfish (piscatorius), juvenile hake,
+positive associations for juvenile monkfish (\emph{L. piscatorius}), juvenile hake,
 juvenile megrim, plaice and juvenile whiting with average positive density,
 which may reflect two different spatial distributions in the more offshore and
 in the inshore areas (Figure 1).
 
-On the third factor, there is a positive association with the Easterly waters
+On the third factor, there is a positive association with the easterly waters
 for encounter probability and negative with the westerly waters. This manifests
 in the species associations as splitting the roundfish species cod, haddock and
 whiting which all have a positive association with the third factor for average
 encounter probability from the rest of the species-groups which have a negative
-association. Positive density is driven by a North / South split (Figure 1),
-with positive values in the Northerly areas. Juvenile monkfish (budgessa and
-piscatorius), cod, juvenile haddock, hake, adult plaice and whiting are also
-positively associated with the third factor towards the North while adult
-monkfish (budegassa and piscatorius), adult haddock, megrims, juvenile plaice
+association. Positive density is driven by a north / south split (Figure 1),
+with positive values in the northerly areas. Juvenile monkfish (\emph{L. budgessa} and
+\emph{L. piscatorius}), cod, juvenile haddock, hake, adult plaice and whiting are also
+positively associated with the third factor towards the north while adult
+monkfish (\emph{L. budgessa} and
+\emph{L. piscatorius}), adult haddock, megrims, juvenile plaice
 and sole are negatively associated reflecting their more southerly distribution
 (Figure 1).
 
@@ -257,11 +256,11 @@ utility of these variables as predictors of species distributions has been
 identified in other marine species distribution models \cite{Robinson2011}; the
 advantage to the approach taken here is that, where such data is unavailable at
 appropriate spatial resolution, the spatial factor analysis can adequately
-characterise these influences on species dynamics.
+characterise these influences on species spatial dynamics.
 
 \subsection{Changes in spatial patterns over time, but stability in species
 	dynamics} While there are clear spatial patterns in the factor
-coefficients describing differences in average encounter probability and
+coefficients describing differences in average (over time) encounter probability and
 positive density (Figure 1), the inter-annual differences in factor
 coefficients show less structure (Figures S5, S6). These inter-annual
 differences are important as they reflect the ability of fishers to predict
@@ -269,7 +268,7 @@ where they can target species from one year to the next, without which it may
 be difficult to avoid unwanted catch.
 
 While spatio-temporal factor coefficients did not show consistent trends from
-year to year, among species-groups there were clear relationships (Figure 2).
+year to year across all species, among species-groups there were clear relationships (Figure 2).
 The same factors appear to drive spatio-temporal distributions of megrim,
 anglerfish species and hake (the deeper water species, species-grouping
 negatively associated with the second axes of Figure 2a) and the roundfish and
@@ -283,8 +282,8 @@ that one or more common environmental drivers are influencing the distributions
 of the species groups, and that driver differentially affects the species
 groups. Temperature is often included as a covariate in species distribution
 models, but was found not to contribute to the variance in the first factor
-values (Figure S6, correlations for either encounter probability or positive
-density $\sim$ 0).
+values (Figure S6, no correlations found for either encounter probability or positive
+density).
 
 \subsection{Spatial correlations show three distinct species-group
 	associations} In order to gain greater insight into the community
@@ -297,13 +296,13 @@ hierarchical clustering identified the same three common groups as our visual
 inspection of factor loadings above, with roundfish (cod, haddock, whiting)
 closely grouped in their association, with correlations for adult cod with
 adult haddock and adult whiting of 0.73 and 0.5 respectively, while adult
-haddock with adult whiting was 0.63. Flatfish (plaice and sole) are also
+haddock with adult whiting was 0.63 (Figure 3a). Flatfish (plaice and sole) are also
 strongly correlated with adult plaice and sole having a coefficient of 0.75.
 The final group are principally the species found in the deeper waters (hake,
 megrim and both anglerfish species) with the megrim strongly associated with
 the budegassa anglerfish species (0.88). Negative relationships were found
 between plaice-sole and the monkfish species (-0.27, -0.26 for the adult size
-class with budegassa adults respectively) and hake (-0.33, -0.37) indicating
+class with budegassa adults respectively) and hake (-0.33, -0.37) (Figure 3a) indicating
 spatial separation in distributions. This confirms the associations among
 species seen in the factor loadings, with three distinct species-group
 assemblages being present.
@@ -333,7 +332,7 @@ from one year to the next. This suggests that a positive or negative
 association between two species-groups is likely be persist from one year to
 the next, and that species-groups are consistently associated with each other
 in the catch. The correlation coefficients were 0.59 (0.52 - 0.66) and 0.47
-(0.38 - 0.55) for encounter probability and positive density respectively.
+(0.38 - 0.55) for encounter probability and positive density respectively [FIGURE??].
 However, a linear regression between the spatial correlations and the
 spatio-temporal correlations shows high variance (R\textsuperscript{2} = 0.36
 and 0.22 respectively), indicating that the scale of these relationships does
@@ -343,7 +342,7 @@ another when trying to balance catch with quotas in mixed fisheries. It can
 also be seen in the spatial factor maps that there are subtle differences in
 spatial patterns in factor loading values from one year to the next (Figures S4
 and S5) indicating changes may be driven by temporally changing environmental
-factors.
+factors and species behaviour.
 
 
 \subsection{Subtle differences in distributions may be important to separate
@@ -359,13 +358,13 @@ species is likely to occur? To address this requirement, we map the difference
 in spatial distribution within a group for each pair of species within a
 species-groupings for a single year (2015; Figure 4). 
 
-Figure 4a indicates that cod had a more North-westerly distribution than
+Cod had a more north-westerly distribution than
 haddock, while cod was more westerly distributed than whiting roughly
-delineated by the 7$^{\circ}$ W line. Whiting appeared particularly
+delineated by the 7$^{\circ}$ W line (Figure 4a). Whiting appeared particularly
 concentrated in an area between 51 and 52 $^{\circ}$ N and 5 and 7 $^{\circ}$
 W, which can be seen by comparing the whiting distribution with both cod
-(Figure 4b) and haddock (Figure 4c). For the deeper water species Figures 4d
-and 4e indicate that hake are more densely distributed in two areas compared to
+(Figure 4b) and haddock (Figure 4c). For the deeper water species (Figures 4d
+and 4e), hake are more densely distributed in two areas compared to
 anglerfishes\footnote{two species combined as they are managed as one} and
 megrim (though megrim has a stable density across the modelled area as
 indicated by the large amount of white space). For anglerfishes and megrim
@@ -375,27 +374,27 @@ densely distributed along the coastal areas of Ireland and Britain, while sole
 are more densely distributed in the Southern part of the English Channel along
 the coast of France.
 
-Figure 4h shows the predicted catch distribution from a "typical" Otter trawl
-gear and Beam trawl gear fishing at three different locations. As can be seen,
+Predicted catch distribution from a ``typical'' otter trawl
+gear and beam trawl fishing at three different locations highlights the differences fishing gear makes on catches (Figure 4h). As can be seen,
 both the gear selectivity and area fished play important contributions to the
 catch compositions; in the inshore area (location 'A') plaice and sole are the
 two main species in catch reflecting their distribution and abundance, though
 the otter trawl gear catches a greater proportion of plaice to sole than the
 beam trawl.  The area between Britain and Ireland (location 'B') has a greater
 contribution of whiting, haddock, cod, hake and anglerfishes in the catch with
-the Otter trawl catching a greater proportion of the roundfish, haddock,
+the otter trawl catching a greater proportion of the roundfish, haddock,
 whiting and cod while the beam trawl catches more anglerfishes and megrims. The
 offshore area has a higher contribution of megrim, anglerfishes and hake with
-the Otter trawl catching a greater share of hake and the Beam trawl a greater
+the otter trawl catching a greater share of hake and the beam trawl a greater
 proportion of megrim. Megrim dominates the catch for both gears in location
 'C', reflecting its relative abundance in the area.  
 
-\subsection{Application of framework to support implementation landing
-	obligation in mixed fisheries}: In application to the Celtic Sea we have
+\subsection{Addressing the scientific challenges of the landing
+	obligation in mixed fisheries} In application to the Celtic Sea we have
 identified spatial separation of three distinct species-groupings (roundfish,
 flatfish and deeper water species) while showing that only subtle differences
-in distributions within species-groups. The differences in catch compositions
-between gears at the same location in Figure 4h show that changing fishing
+exist in distributions within species-groups. The differences in catch compositions
+between gears at the same location (Figure 4h) show that changing fishing
 methods can go some way to affecting catch, yet that differences in catches
 between locations are likely to be more important. For example, beam trawls
 fishing at the inshore locations (e.g. location 'A' in Figure 4) are likely to
@@ -435,8 +434,8 @@ An important question for the implementation of the EU's landing obligation is
 how far spatial avoidance can go to achieving catch balancing in fisheries.
 Our model captures differences between location fished for two gear types and
 their broad scale effect on catch composition, information crucial for managers
-in implementing the landing obligation.  However, it likely the analysis
-reflects a lower bound on the utility of spatial avoidance as fine scale
+in implementing the landing obligation.  It is likely, however, that this analysis
+reflects a lower bound on the utility of spatial avoidance as fine-scale
 behavioural decisions such as time-of-day, gear configuration and location
 choices can also be used to affect catch\cite{Abbott2015, Thorson2016}. Results
 of empirical studies undertaken elsewhere\cite{Branch2008, Kuriyama2016}
@@ -466,10 +465,11 @@ Complex environmental, fishery and community drivers of distribution for groups
 of species highlights the scale of the challenge in separating catches within
 the species-groups using spatial management measures. This has important
 implications for management of the mixed fisheries under the EU landings
-obligation and our analysis identifies where it may be easier to separate
+obligation. Our analysis identifies where it may be easier to separate
 catches of species (among groups) and where it is more challenging (within
-groups). The framework we propose reduces the complexity of the system to it's
-major components and thus allows informed management discussion over more
+groups). We propose that the framework presented in Figures 1-4 provides
+a viable route to reducing the complexity of highly mixed systems. 
+This can allow informed management discussion over more
 traditional anecdotal knowledge of single-species distribution in space and
 time.
 
@@ -478,7 +478,7 @@ time.
 
 \subsection{Model structure:} 
 
-VAST\footnote{software in the R statistical programming language can be found
+VAST\footnote{Software in the R statistical programming language can be found
 	here: \url{www.github.com/james-thorson/VAST}} implements a
 delta-generalised linear mixed modelling (GLMM) framework that takes account of
 spatio-temporal correlations among species-groups through implementation of a
@@ -496,8 +496,8 @@ advances in joint dynamic species models \cite{Thorson2017} to take account
 of associations among species-groups by modelling response variables
 as a multivariate process. This is achieved through implementing a factor
 analysis decomposition where common latent trends are estimated so that the
-number of common trends (M) is less than the number of species-groups (N)
-modelled ($1 \leq N \leq M$). The factor coefficients are then associated
+number of common trends ($M$) is less than the number of species-groups ($N$)
+modelled. The factor coefficients are then associated
 through a function for each factor that returns a positive or negative
 association of one or more species with any location. Log-density of any
 species is then be described as a linear combination of factors and loadings:
@@ -575,7 +575,7 @@ estimated within the model. Here, the correlation decays smoothly over space
 the further from the location and includes geometric anisotropy to reflect the
 fact that correlations may decline in one direction faster than another (e.g.
 moving offshore) \cite{Thorson2013}.  The best fit estimated an anisotropic
-covariance where the correlations were stronger in a North-East - South-West
+covariance where the correlations were stronger in a north-east - south-west
 direction, extending approximately 97 km and 140 km before correlations for
 encounter probability and positive density reduced to \textless 10 \%,
 respectively (Figure S9).  Incorporating the spatiotemporal correlations among
@@ -609,7 +609,7 @@ gears (more effective for round fish species) and beam trawl gears (more
 effective for flatfish species).
 
 No fixed covariates for habitat quality or other predictors of encounter
-probability or positive density were include. While incorporation may improve
+probability or positive density were included. While incorporation may improve
 the spatial predictive performance \cite{Thorson2017}, it was not found to be
 the case here based on model selection with Akaike Information Criterion (AIC)
 and Bayesian Information Criterion (BIC).
@@ -716,7 +716,7 @@ References: 45 \\
 	 from the MARES joint doctoral research programme (MARES\_14\_15) and
 	 Cefas seedcorn (DP227AC) and logistical support, desk space and
 	 enlightening discussions with Trevor Branch, Peter Kuriyama, Cole
-	 Monnahan  and John Trochta at the School of Aquatic and Fisheries
+	 Monnahan and John Trochta at the School of Aquatic and Fisheries
 	 Science (SAFS) at the University of Washington during a study visit.
 	 
 	 The authors gratefully acknowledge the hard-work of many scientists
@@ -724,10 +724,10 @@ References: 45 \\
 	 surveys used in this study without which it would not have been
 	 possible.  
 	 
-	 The manuscript benefited hugely from discussions with David Stokes,
+	 The manuscript benefited greatly from discussions with David Stokes,
 	 Colm Lordan, Claire Moore and Hans Gerritsen (Marine Institute,
 	 Ireland), Lisa Readdy, Chris Darby, Ian Holmes, Stephen Shaw and Tim
-	 Earl (Cefas).  Grateful thanks also go to Lisa Readdy for provision of
+	 Earl (Cefas).  The authors are very grateful to Lisa Readdy for provision of
 	 the Cefas datasets.
 
  \item[Competing Interests] The authors declare that they have
@@ -749,7 +749,7 @@ References: 45 \\
 		average encounter probability and (b) the average positive
 		density for the species-groups (outer figures) and spatially
 		(inner figures).  Red: positive association to the factor,
-		Blue: negative association}
+		Blue: negative association.}
 \end{center}
 \end{figure}
 
@@ -761,7 +761,7 @@ References: 45 \\
 	\label{fig:2}
 	\caption{Position of each species-group on the first two axes from the
 		factor analysis for (a) spatio-temporal encounter probability
-		and (b) spatio-temporal positive density}
+		and (b) spatio-temporal positive density.}
 \end{center}
 \end{figure}
 
@@ -774,7 +774,7 @@ References: 45 \\
 		Species-groups are clustered into three groups based on a
 		hierarchical clustering method with non-significant
 		correlations (the Confidence Interval [+- 1.96 * SEs] spanned
-		zero) left blank}
+		zero) left blank.}
 	\end{center}
 \end{figure}
 
@@ -784,7 +784,7 @@ References: 45 \\
 	\label{fig:4}
 	\caption{Differences in the standardised spatial density for pairs of
 		species and expected catch rates for two different gears at
-		three different locations in 2015}
+		three different locations in 2015.}
 \end{center}
 \end{figure}
 
