--- a/docs/write_up/JDM_mixed_fishery.tex
+++ b/docs/write_up/JDM_mixed_fishery.tex
@@ -15,7 +15,8 @@
 \setlist{itemsep=1pt} % This controls spacing between items in the lists
 \setlength\parindent{0pt} % Removes all indentation from paragraphs
 % figures here	
-\graphicspath{figures/}
+\graphicspath{{figures/}}
+\renewcommand{\familydefault}{\sfdefault}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \title{Working title: Spatial separation of catches in highly mixed fisheries}
@@ -25,7 +26,6 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \begin{document}
 \maketitle
-\sfdefault
 
 \begin{affiliations}
 \item Marine and Freshwater Research Centre, Galway-Mayo Institute of
@@ -682,26 +682,6 @@ over time from international assessments (S13), yet also provide detailed
 insight into species co-occurrence and the strength of associations in space
 and time. 
 
-\newpage
-
-Total words: \\
-Abstract:	 	  182 \\
-Intro:   		  624  \\
-Outline:		  223 \\
-Case study desc:	  229 \\
-Results 1:		  636 \\
-Results 2:		  252 \\
-Results 3:		  568 \\
-Discussion:	          461 \\
-Conclusions:	          635  \\
-Methods:		  1430 \\
-\\
-TOTAL:			  5240 \\
-Total - abstract          5058 \\
-
-Figures: 4  \\
-References: 45 \\
-
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \end{linenumbers}
 \newpage
@@ -734,6 +714,8 @@ References: 45 \\
 	 Ireland), Lisa Readdy, Chris Darby, Ian Holmes, Stephen Shaw and Tim
 	 Earl (Cefas).  The authors are very grateful to Lisa Readdy for
 	 provision of the Cefas datasets.
+
+ \item[Author contributions] XXXX
 
  \item[Competing Interests] The authors declare that they have
 	 no competing financial interests.
