Small amendment to abstract

--- a/docs/write_up/JDM_mixed_fishery.tex
+++ b/docs/write_up/JDM_mixed_fishery.tex
@@ -49,7 +49,7 @@ else lose productivity.
 A mechanism for decoupling exploitation of species caught together is spatial
 targeting, but this remains challenging due to complex fishery dynamics and a
 lack of understanding of spatiotemporal community dynamics. We develop
-application of a joint species distribution model (spatial dynamic factor
+a framework based on joint species distribution modelling (spatial dynamic factor
 analysis) to understand how spatial community and fishery dynamics interact to
 determine species and size composition in the example of the highly mixed
 fisheries of the Celtic Sea.  Clear common spatial patterns emerge for three
