adding back line numbers

--- a/docs/write_up/JDM_mixed_fishery_letter.tex
+++ b/docs/write_up/JDM_mixed_fishery_letter.tex
@@ -4,7 +4,7 @@
 \documentclass{nature}
 \usepackage[margin=1in]{geometry} % Required to make the margins smaller to fit
 % more content on each page 
-%\usepackage{lineno} % add some line nos to aid reading
+\usepackage{lineno} % add some line nos to aid reading
 \usepackage[utf8]{inputenc}
 \usepackage{enumitem}
 \usepackage[hyphens]{url} % for breaking url's in the bib
@@ -38,34 +38,37 @@
 \end{affiliations}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%\begin{linenumbers}
+\begin{linenumbers}
 
 \begin{abstract} 
 %% based on: https://www.nature.com/nature/authors/gta/2c_Summary_para.pdf
 %% Basic introduction 
-Mixed fisheries capture a mix of species at the same time and are a dominant type of fishery worldwide.
-Overexploitation in mixed fisheries occurs when catches continue for available quota species
-while low quota species are discarded. As EU fisheries
-management moves to count all fish caught against quota (the `Landings
-obligation'), the challenge is to catch available quota within new constraints,
-else lose productivity.  
+Mixed fisheries capture a mix of species at the same time and are a dominant
+type of fishery worldwide.  Overexploitation in mixed fisheries occurs when
+catches continue for available quota species while low quota species are
+discarded. As EU fisheries management moves to count all fish caught against
+quota (the `landings obligation'), the challenge is to catch available quota
+within new constraints, else lose productivity.  
 %% More detailed background
 A mechanism for decoupling exploitation of species caught together is spatial
-targeting, but this remains challenging due to complex fishery and population dynamics in space and time. 
+targeting, but this remains challenging due to complex fishery and population
+dynamics in space and time. 
 %% General problem
-How far spatial targetting can go to practically separate species is often unknown and anecdotal.
+How far spatial targeting can go to practically separate species is often
+unknown and anecdotal.
 %% Summarising the main result
-Here we develop a dimension-reduction framework based on joint species distribution modelling (spatial dynamic factor
-analysis) to understand how spatial community and fishery dynamics interact to
-determine species and size composition.  
+Here we develop a dimension-reduction framework based on joint species
+distribution modelling (spatial dynamic factor analysis) to understand how
+spatial community and fishery dynamics interact to determine species and size
+composition.  
 %%	 Two or three sentences explaining what the main result
-In the example application to the highly mixed
-fisheries of the Celtic Sea, clear common spatial patterns emerge for three
-distinct species-groups and, while distribution varies inter-annually, the same
-species-groups are consistently found in higher densities together, with more
-subtle differences within species-groups - where spatial separation may not be practically possible. \deleted{The results highlight both
-opportunities for and limitations of the ability to spatiotemporally separate
-catches.}
+In the example application to the highly mixed fisheries of the Celtic Sea,
+clear common spatial patterns emerge for three distinct species-groups and,
+while distribution varies inter-annually, the same species-groups are
+consistently found in higher densities together, with more subtle differences
+within species-groups - where spatial separation may not be practically
+possible. \deleted{The results highlight both opportunities for and limitations
+	of the ability to spatiotemporally separate catches.}
 %%  general context
 We highlight the importance of dimension reduction techniques to focus
 management discussion on axes of maximal separation in space and time. We
@@ -85,7 +88,8 @@ population sizes and allow increased sustainable catches, yet fisheries catch
 globally remains stagnant \deleted{\cite{FAO2016}}. In light of projected
 increased demand for fish protein \deleted{\cite{B??n??2016}} there is an
 important role for well managed fisheries in supporting future food security
-\cite{Mcclanahan2015} \deleted[id=coilin]{and} \deleted{there} \replaced[id=coilin]{necessitating that}{remains a need to ensure} fisheries
+\cite{Mcclanahan2015} \deleted[id=coilin]{and} \deleted{there}
+\replaced[id=coilin]{necessitating that}{remains a need to ensure} fisheries
 are managed efficiently to maximise productivity.
 
 A particular challenge in realising increased catches from rebuilt populations
@@ -110,10 +114,11 @@ counted against the respective stock quota\deleted{; second, by 2020 all fish
 	stocks must be fished so as to be able to produce their Maximum
 	Sustainable Yield
 	(MSY)\cite{EuropeanParliamentandCounciloftheEuropeanUnion2013}. The
-	changes are}\deleted[id = coilin]{, expected to contribute to attainment of the goal of Good
-Environmental Status (GES) under the European Marine Strategy Framework
-Directive (MSFD; \cite{EuropeanParliament2008}) and move Europe towards an
-ecosystem based approach to fisheries management \cite{Garcia2003}}. 
+	changes are}\deleted[id = coilin]{, expected to contribute to
+	attainment of the goal of Good Environmental Status (GES) under the
+	European Marine Strategy Framework Directive (MSFD;
+	\cite{EuropeanParliament2008}) and move Europe towards an ecosystem
+	based approach to fisheries management \cite{Garcia2003}}. 
 
 \deleted{Societal objectives for fisheries to achieve MSY across ecosystem
 	components are paralleled by} Individual fishers goals \added[id = coilin]{are to} maximise
@@ -701,7 +706,7 @@ insight into species co-occurrence and the strength of associations in space
 and time. 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%\end{linenumbers}
+\end{linenumbers}
 \newpage
 \Urlmuskip=0mu plus 1mu\relax
 \bibliographystyle{naturemag}
